<resources>
    <string name="app_name">TODO today</string>
    <string name="startFrom_mainWidget">شروع</string>
    <string name="endTo_mainWidget">پایان</string>
    <string name="taskToDo_mainWidget">کارهای روزانه</string>
    <string name="emptyListView_mainWidget">لیست شما خالی است!</string>
    <string name="add">اضافه کن</string>
    <string name="newTaskTodo_menu">برنامه ریزی</string>
    <string name="newDay_menu">روز جدید</string>
    <string name="newTaskTitle_menu">عنوان کار</string>
    <string name="charts_menu">نمودارها</string>
    <string name="firstRunTitle_menu">اولین اجرا</string>
    <string name="help">راهنما</string>
    <string name="settings">تنظیمات</string>
    <string name="aboutTitle">درباره</string>
    <string name="tapHere">لمس کنید!</string>
    <string name="intimateOk">حله</string>
    <string name="toastAddSuccess">با موفقیت اضافه شد</string>
    <string name="toastAddUnSuccess">مشکلی پیش آمده</string>
    <string name="message_newTaskTitle">یک عنوان برای کارهای روزانه خود وارد کنید.</string>
    <string name="title_newTaskTitle">عنوان</string>
    <string name="errorExistTitle_newTaskTitle">عنوان وارد شده در لیست موجود است
    \n
    میتوانید از این عنوان در برنامه ریزی روزانه استفاده کنید
    </string>
    <string name="description_newTaskTitle">از این عنوان برای تهیه نمودار استفاده خواهد شد.</string>
    <string name="hintEdtTaskTitle_taskTitle">عنوان…</string>
    <string name="title_newTaskTodo">برنامه ریزی</string>
    <string name="message_newTaskTodo">
        شما در حال برنامه ریزی برای روز
        %s
        هستید
        \n
         در غیر اینصورت "روز جدید" انتخاب کنید!
    </string>
    <string name="startFrom_newTaskTodo">شروع از ساعت:</string>
    <string name="endTo_newTaskTodo">پایان تا ساعت:</string>
    <string name="selectTaskTitle_newTaskTodo">یکی از عناوین وظایف خود را انتخاب کنید</string>
    <string name="errorSelectPastTime_newTaskTodo">زمان گذشته را نمیتوانید انتخاب کنید!</string>
    <string name="errorSelectStartFromFirst_newTaskTodo">ابتدا زمان شروع را انتخاب کنید!</string>
    <string name="errorEmptyCells_newTaskTodo">لطفا همه اطلاعات را پرکنید!</string>
    <string name="reminderTitle">وقت %s رسیده :)</string>
    <string name="title_newDay"> روز جدید</string>
    <string name="message_newDay">تاریخی که در حال برنامه ریزی برای آن هستید را انتخاب کنید.</string>
    <string name="description_newDay">روز قبلی شما از لیست حذف شده و به دیتابیس انتقال می یابد؛ نتایج روزهای قبل را  میتوانید در نمودار مشاهده کنید.</string>
    <string name="errorSelectDate_newDay">یک روز انتخاب کنید!</string>
    <string name="toastAddNewDaySuccess_newDay">روز جدید با موفقیت افزوده شد
    \n
    میتوانید برای امروز برنامه ریزی کنید.
    </string>
    <string name="btnAddDate_newDay">انتخاب تاریخ</string>
    <string name="selectDateFrom_dialogSelectDate">از تاریخ:</string>
    <string name="selectDateTo_dialogSelectData">تا تاریخ:</string>
    <string name="okSelectDate_dialogSelectDate">تایید</string>
    <string name="selectDate_charts">انتخاب تاریخ</string>
    <string name="detailChartsDate_charts">
        نمودارهای شما بین تاریخ
        %s
        و
        %s
    </string>
    <string name="errorSelectPastDate_charts">زمان گذشته را نمیتوانید انتخاب کنید!</string>
    <string name="errorSelectStartDateFirst_charts">ابتدا تاریخ شروع را انتخاب کنید!</string>
    <string name="errorFirstSelectDate_charts">برای نمایش نمودار ها ابتدا تاریخ انتخاب کنید!</string>
    <string name="descriptionXAxisChart_charts">کارهای روزانه</string>
    <string name="descriptionYAxisChart_charts">ساعت</string>
    <string name="descriptionDoneChart_charts">کارهای انجام شده</string>
    <string name="descriptionUndoneChart_charts">کارهای انجام نشده</string>
    <string name="listIsEmpty_charts">لیست شما برای تاریخ های انتخابی خالی است!</string>
    <string name="switchReminder_settings">یادآور کارهای روزانه</string>
    <string name="descriptionReminder_settings">با شروع همه ی کارهایی که در لیست هست؛ یک نوتیفیکیشن دریافت میکنید تا همه کارهای تعریف شده را در زمان خود انجام دهید.</string>
    <string name="saveSettings_settings">ذخیره</string>
    <string name="errorNoCalender_settings">
        تقویمی یافت نشد!
        \n
        لطفا مطمئن شوید که تقویم دستگاه شما فعال است
    </string>
    <string name="dailyNotification_settings">دریافت نوتیفیکیشن های انگیزشی</string>
    <string name="descriptionDailyNotification_settings">صبح هر روز یک نوتیفیکشن انگیزشی دریافت خواهید کرد. ممکن است وقتی دستگاه شما در حالت ذخیره نیرو یا شارژ شما رو به اتمام باشد؛ در آن روز نوتیفیکشنی دریافت نکنید.</string>
    <string name="titleRadioGroupTheme_settings">پوسته ها</string>
    <string name="grayTheme_settings">خاکستری</string>
    <string name="darkTheme_settings">تیره</string>
    <string name="descriptionSettings_settings">تنظیمات بعد از ذخیره سازی اعمال خواهند شد.</string>
    <string name="toastSettingsSave">تنظیمات با موفقیت ذخیره شد.</string>
    <string name="nextButton_main">بعدی</string>
    <string name="descriptionSlider1_main_slider1">
        این برنامه براساس ویجتی که بر روی صفحه اصلی قرار میگیرد؛ کار میکند.
    \n
        برای استفاده از این برنامه ابتدا باید ویجت برنامه را از لیست ویجت های دستگاه انتخاب کرده و آن را به صفحه اصلی اضافه کنید.
    </string>
    <string name="descriptionSlider2_main_slider2">
        برای آگاهی از فرا رسیدن زمان کارهای روزانه خود بصورت نوتیفیکیشن؛ میتوانید گزینه ”یادآور کارهای روزانه” را از تنظیمات فعال کنید.
    </string>
    <string name="descriptionSlider3_main_slider3">
        روزتان را با جملات انگیزشی شروع کنید!
        \n
        برای رسیدن به اهدافتان کمک خواهد کرد
    </string>
    <string name="descriptionSlider4_main_slider4">
        برنامه دارای دو تم تیره و خاکستری است؛
        \n
        برای تغییر تم به تنظیمات مراجعه کنید…
    </string>
    <string name="mainDescriptionHelp_help">
         برای برنامه ریزی ابتدا از منوی اصلی؛ گزینه ”روز جدید” را لمس کرده و روزی را که در حال برنامه ریزی برای آن روز هستید را انتخاب کنید. سپس باید برای همه ی کارهایی که در طول روز قرار است انجام دهید، یک عنوان انتخاب کنید (با لمس بر روی ”عنوان کار” عناوین خود را اضافه کنید.) و در قدم آخر کافی است به صفحه ”برنامه ریزی” که از منوی اصلی قابل دسترسی است، رفته و برای کارهای روزانه خود برنامه ریزی کنید.
    </string>
    <string name="howAddMyDateInChart_exvTitle_help">چگونه میتوانم برنامه روز قدیمی را به نمودارها انتقال بدهم و برای روز جدید برنامه ریزی کنم؟</string>
    <string name="howAddMyDateInChart_exvText_help">با انتخاب روزی جدید، لیست برنامه روزانه ی روز قبلی شما از لیست از حذف شده و به دیتابیس انتقال می یابد و شما میتوانید نتایج را در نمودارها مشاهده کنید</string>
    <string name="reminderNotWork_exvTitle_help">
        وقتی من یادآور کارهای روزانه را از تنظیمات فعال میکنم،این ارور را میده
        \n
        ”
        تقویمی یافت نشد!
        لطفا مطمئن شوید که تقویم دستگاه شما فعال است
        ”
    </string>
    <string name="reminderNotWork_exvText_help">
        یادآور کارهای روزانه بر اساس تقویم دستگاه کار میکند.
        \n
        و این ارور یعنی بر روی دستگاه شما تقویم فعالی موجود نمی باشد و شما برای رفع این ارور لازم است که تقویم دستگاه را با ایمیل فعال کنید تا این اطلاعات را به تقویم دستگاه اضافه کند!
    </string>
    <string name="dailyNotificationNotWork_exvTitle_help">چرا نوتیفیکیشن های انگیزشی برای من ارسال نمی شود؟</string>
    <string name="dailyNotificationNotWork_exvText_help">اگر دستگاه شما در حالت ذخیره نیرو می باشد، برای شما نوتیفیکیشنی ارسال نخواهد شد مگر اینکه این برنامه را در لیست مستثناهای ذخیره نیرو قرار دهید تا برنامه اجازه ی ارسال نوتیفیکیشن را داشته باشد.</string>
    <string name="chartIsNotDisplay_exvTitle_help">چرا نمودارها نمایش داده نمیشوند؟</string>
    <string name="chartIsNotDisplay_exvText_help">
        در انتخاب تاریخ ها برای نمودار دقت کنید!
        \n
        ممکن است در بازه ی انتخابی شما هیچ داده ای موجود نباشد
    </string>
    <string name="about">
        این برنامه در اوقات فراغت و به صورت Free طراحی و منتشر شده است. با امید اینکه حداقل برنامه زندگی یک فرد را سامان ببخشد.
        \n\n
        اگر برنامه نویس اندروید هستید خوشحال میشم نظراتتون را مطرح کنید :)
    </string>
    <string name="aboutLink">
        لینک گیت هاب این پروژه:
        \n
        https://github.com/alirezajavadi/todo.today
    </string>
    <string name="iCan_notification">من میتوانم!</string>
</resources>