<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_activities"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightFooterHeader"
        android:background="@drawable/shape_bg_header"
        android:gravity="center"
        android:text="@string/title_newDay"
        android:textColor="@color/textColorHigh" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightShadow"
        android:background="@drawable/shape_header_shadow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/message_newDay"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/description_newDay"
        android:textColor="@color/textColorLow"
        android:textSize="@dimen/textSizeDescription" />


    <TextView
        android:id="@+id/txv_selectTodayDate_newDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_bg_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingTop="@dimen/paddingBtn"
        android:paddingBottom="@dimen/paddingBtn"
        android:text="@string/btnAddDate_newDay"
        android:textColor="@color/textColorHigh" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightShadow"
        android:background="@drawable/shape_footer_shadow" />

    <TextView
        android:id="@+id/txv_addNewDay_newDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_footer"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/add"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>