<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_activities"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_header_main_widget"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/selectDate_charts"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv_selectDateFrom_dialogSelectDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tapHere"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/selectDateFrom_dialogSelectDate"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txv_selectDateTo_dialogSelectDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_item"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tapHere"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/selectDateTo_dialogSelectData"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view" />

<!--    todo change this tags background -->
    <TextView
        android:id="@+id/txv_okSelectedDate_dialogSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_footer"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/okSelectDate_dialogSelectDate"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>