<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_activities"
    tools:context=".activity.SettingsActivity"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/imageViewTop"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/shape_bg_header"
        android:padding="3dp"
        android:src="@drawable/ic_settings" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightShadow"
        android:layout_below="@id/imageViewTop"
        android:background="@drawable/shape_header_shadow" />

    <Switch
        android:id="@+id/sw_reminder_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewTop"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/textViewReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/sw_reminder_settings"
        android:layout_alignBottom="@id/sw_reminder_settings"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@id/sw_reminder_settings"
        android:gravity="right|center_vertical"
        android:text="@string/switchReminder_settings"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/txv_descriptionReminder_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sw_reminder_settings"
        android:gravity="right"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:text="@string/descriptionReminder_settings"
        android:textColor="@color/textColorLow"
        android:textSize="@dimen/textSizeDescription" />


    <View
        android:id="@+id/viewA_setting"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/txv_descriptionReminder_settings"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/view" />

    <Switch
        android:id="@+id/sw_dailyNotification_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewA_setting"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textViewDailyNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/sw_dailyNotification_settings"
        android:layout_alignBottom="@id/sw_dailyNotification_settings"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@id/sw_dailyNotification_settings"
        android:gravity="right|center_vertical"
        android:text="@string/dailyNotification_settings"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/txv_descriptionDailyNotification_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sw_dailyNotification_settings"
        android:layout_marginBottom="14dp"
        android:gravity="right"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:text="@string/descriptionDailyNotification_settings"
        android:textColor="@color/textColorLow"
        android:textSize="@dimen/textSizeDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightShadow"
        android:layout_above="@id/txv_saveSettings_settings"
        android:background="@drawable/shape_footer_shadow" />

    <TextView
        android:id="@+id/txv_saveSettings_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightFooterHeader"
        android:layout_below="@id/txv_descriptionDailyNotification_settings"
        android:background="@drawable/selector_bg_footer"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/saveSettings_settings"
        android:textColor="@color/textColorHigh"
        android:textStyle="bold" />

</RelativeLayout>